<resources>
    <string name="app_name">Taahied</string>
    <string name="requseorder">بيانات الطلب</string>
    <string name="MoreText">عرض المزيد</string>
    <string name="orderNumbe">رقم الطلب: &#160;</string>
    <string name="CompanyName">اسم الشركة</string>
    <string name="hestoryOfOrder">تاريخ الطلب: &#160;</string>
    <string name="agentData">بيانات العميل</string>
    <string name="name">الاسم: &#160;</string>
    <string name="acualAdders">العنوان الفعلي: &#160;</string>
    <string name="PhoneNumber">رقم الموبيل: &#160;</string>
    <string name="ErthNumber">الرقم الأرضي: &#160;</string>
    <string name="NailnolityNumber">الرقم القومي: &#160;</string>
    <string name="Servies">الخدمات</string>
    <string name="Accepts">قبول</string>
    <string name="Rejacet">رفض</string>
    <string name="Confrmation">تأكيد</string>
    <string name="RjectResson">سبب الرفض</string>
    <string name="RequseRescipt">جاري قبول الطلب</string>
    <string name="SometingError">يبدو ان هناك خطأ ما</string>
    <string name="AssigmentAccept">تم قبول الخدمة</string>
    <string name="startOpraation">بدء الاستعلام</string>
    <string name="StepsOperation">خطوات العمل</string>
    <string name="retrunOperan">إعادة للمسئول</string>
    <string name="RejectReson">سبب الإعادة</string>
    <string name="Conframtion">تأكيد</string>
    <string name="There_No_Notes">لا توجد خطوات عمل</string>
    <string name="orderget">جار تحميل الطلبات</string>
    <string name="StepsQusetion">خطوات الاستعلام</string>
    <string name="addSteps">إضافة مرحلة تنفيذ</string>
    <string name="entarThetextHere">ادخل النص هنا</string>
    <string name="SaveAndSent">حفظ وإرسال</string>
    <string name="Message">الكلاس الذي يحاول استعدعاء هذا الديلوج مش بيألمنت الانترفيس بتاعه وشكرا</string>
    <string name="dontLettheField">لاتترك الحقل فارغ رجاء </string>
    <string name="SometingWorng">يبدو ان هناك خطأ ما</string>
    <string name="itsNotEmpty">ارجو منك الا تترك حقل فارغ</string>
    <string name="Orderrequset">جاري الاعادة</string>
    <string name="NickName">اللقب :</string>
    <string name="AddersOnCard">العنوان في البطاقة :</string>
    <string name="PhoneNumber2">رقم الموبيل 2 :</string>
    <string name="Job">الوظفية :</string>
    <string name="JobIncard">الوظفية في البطاقة:</string>
    <string name="StaingAsking">إستعلام محل الإقامة</string>
    <string name="agetInformation">بيانات العميل</string>
    <string name="FullName">الإسم بالكامل - وفقاً للرقم القومي</string>
    <string name="NakeNameFound">إسم الشهرة (إن وجد)</string>
    <string name="DataOfparthe">تاريخ الميلاد</string>
    <string name="NumberPhone1">رقم المحمول 1</string>
    <string name="PhoneNumber_2">رقم المحمول 2</string>
    <string name="StaringData">بيانات محل الإقامة</string>
    <string name="Hometype">نوع السكن</string>
    <string name="Owned">تمليك</string>
    <string name="Family">عائلي</string>
    <string name="other">أخري</string>
    <string name="newRent">ايجار جديد</string>
    <string name="oldeRent">ايجار قديم</string>
    <string name="rent">الايجار</string>
    <string name="RentLogn">مدة ايجار</string>
    <string name="CostelyRant">قيمة الايجار</string>
    <string name="dataEndRant">تاريخ انتهاءعقد الايجار</string>
    <string name="AccualAdders">عنوان السكن الفعلي</string>
    <string name="HomeNumer">رقم المنزل</string>
    <string name="StreatName">إسم الشارع</string>
    <string name="nebored">حي/قرية</string>
    <string name="Ciety">مدينة/مركز</string>
    <string name="Gonvremt">محافظة</string>
    <string name="SpeiaclSiend">علامة مميزة</string>
    <string name="LogtimeStaing">مدة الإقامة في السكن الحالي</string>
    <string name="RecistDatafile">بيانات إيصال المرافق</string>
    <string name="ReciatType">نوع إيصال المرافق</string>
    <string name="Gas">غاز</string>
    <string name="Wataer">مياه</string>
    <string name="Electeicy">كهرباء</string>
    <string name="CounterNumber">رقم العداد</string>
    <string name="BorderNumber">رقم اللوحة</string>
    <string name="AvvegeCost">متوسط الاستهلاك شهريا</string>
    <string name="WifeHusbandName">بيانات الزوج / الزوجة</string>
    <string name="phone">الرقم الارضي</string>
    <string name="numberOFFameil">عدد أفراد الأسرة المقيمين</string>
    <string name="Requsetdata">نتيجة الإستعلام</string>
    <string name="doestItagent">هل البيانات الشخصية للعميل مطابقة أم لا ؟</string>
    <string name="no">لا</string>
    <string name="yes">نعم</string>
    <string name="staingisRight">هل بيانات محل إقامة العميل مطابقة أم لا ؟</string>
    <string name="agentSameAdders">هل العميل بنفس العنوان أم لا ؟</string>
    <string name="reaicisTure">هل بيانات إيصال المرافق مطابقة أم لا ؟</string>
    <string name="wiftisTrue">هل بيانات الزوج / الزوجة مطابقة أم لا ؟</string>
    <string name="FamilyisTrue">هل بيانات الأسرة مطابقة أم لا ؟</string>
    <string name="RepationData">سمعة العميل في محل الاقامة</string>
    <string name="Prfcit">ممتاز</string>
    <string name="good">جيد</string>
    <string name="worst">سئ</string>
    <string name="OperstionSource">مصادر الاستعلام</string>
    <string name="falisty">منشأة مجاورة</string>
    <string name="Near">قريب</string>
    <string name="Currently">جار</string>
    <string name="agentClosed">نشاط العميل مغلق</string>
    <string name="NoActiveForAgent">لا يوجد نشاط قائم للعميل</string>
    <string name="MoneyWall">الجدارة المالية لنشاط العميل ضعيفة بناءاً على الدراسة المالية</string>
    <string name="agelessThaenone">عمر نشاط العميل أقل من عام واحد</string>
    <string name="theActivieNotforeAget">النشاط لا يخص العميل</string>
    <string name="theDontKnow">شركاء العميل لا يعلمون عن طلب الحصول على التمويل</string>
    <string name="theLesstAge">   عمر العميل يتعارض مع الفئة العمرية المقبولة \n (أقل من 21 سنة - أكبر من 59 سنة)</string>
    <string name="activitagent">نشاط العميل موسمي</string>
    <string name="moneyGive"> القرض لغرض آخر غير تمويل المشروع</string>
    <string name="heyhadMoney">العميل لديه قرض ساري (I-Score)</string>
    <string name="hedidint">العميل رفض التمويل ورفض الإدلاء بمعلومات عن النشاط</string>
    <string name="agentHavebad"> سمعة العميل سيئة بناءاً على المعاينة الميدانية</string>
    <string name="hadstucks"> العميل لديه ديون أخرى بناءاً على المعاينة الميدانية</string>
    <string name="addersNotWorng">  لم يستدل على عنوان نشاط العميل \n(لم نتمكن من الوصول له تليفونياً)</string>
    <string name="ActivityPolcity"> نشاط العميل محظور تمويله طبقاً للسياسة الإئتمانية</string>
    <string name="theyDeanpdOnSesong">  نشاط العميل ذو طبيعة موسمية</string>
    <string name="padReapation"> سمعة العميل رديئة بناءاً على الإستعلام من المحيطين  </string>
    <string name="hadStructer">  إتضح وجود مديونية على العميل بناءاً على الإستعلام من المحيطين</string>
    <string name="heDoesnthavaAdders"> لم يستدل على عنوان نشاط العميل\n (مع عدم التمكن من الوصول له تليفونياً)</string>
    <string name="AgenthavePath">   الضامن شريك للعميل بنفس النشاط</string>
    <string name="theyDidentExsite">   عدم إجادة العميل أو الضامن للقراءة والكتابة</string>
    <string name="notmating">  عدم مطابقة إيصال المرافق لمحل النشاط</string>
    <string name="activtyNomating">  النشاط غير مطابق</string>
    <string name="theybensmothg">   تم الإقتراض على نفس النشاط لصالح عميل آخر</string>
    <string name="denyFromBank"> مرفوض من البنك</string>
    <string name="stationRject">  رفض المراجعة المركزية</string>
    <string name="agenst_bolesy">  يتعارض مع السياسة الإئتمانية للشركة</string>
    <string name="theNotCompe"> مستندات المنح غير كاملة</string>
    <string name="overRated"> المبالغة في تقدير قيمة القرض من قبل مسئولي التمويل</string>
    <string name="theRentNothaveNothing">  العميل أجير وليس لديه نشاط قائم</string>
    <string name="notMathingInactivty">  إختلاف طبيعة النشاط بالطلب عن النشاط الفعلي للعميل </string>
    <string name="systemDeny">  رفض آلي من النظام</string>
    <string name="TheyNotMatching">  عدم تطابق نشاط العميل مع الأنشطة المستهدفة</string>
    <string name="theyHavlogn">  وجود قرض قائم مع الجهة</string>
    <string name="repate">  تكرار توقف العميل عن النشاط خلال العام الواحد</string>
    <string name="perives">  سبق إخلال العميل بإلتزاماته المالية مع الجهة</string>
    <string name="fall">  وقوع العميل خارج نطاق الفرع</string>
    <string name="Rject">  رفض الضامن ولابد من وجود ضامن آخر للعميل</string>
    <string name="otherResson">   أسباب أخرى</string>
    <string name="why">رجاء اكتب السبب</string>
    <string name="IDNumber">الرقم القومي يجب ان يكون مكون 14 رقم</string>
    <string name="PhoneNumberValdtion">رقم الهاتف يجب ان يكون اكثر من  اكثر من 11 رقم</string>
    <string name="plaseWait">يرجو الانتظار ....</string>
    <string name="DeletQuery">جاري حذف الاستعلام</string>
    <string name="Formdelet">تم حذف الاستعلام لوقت لاحق</string>
    <string name="thereWorng">عفوا يبدو ان هناك خطأ ما</string>
    <string name="Done">تسليم</string>
    <string name="ReDone">حذف الاستعلام</string>
    <string name="Attachemnt">المرفقات</string>
    <string name="AttachemntReciet">إيصال المرافق</string>
    <string name="WirPhoto">صورة الرقم القومي للزوج / الزوجة</string>
    <string name="Upload">ارفق ايصال المرافق</string>
    <string name="uploadPhoto">ارفق صورة بطاقة</string>
    <string name="JobSerceh">إستعلام جهة العمل</string>
    <string name="CostRent">قيمة الأجر</string>
    <string name="Erromesg">عفوا يبدو ان هناك خطأ ما</string>
    <string name="DontLetEMpaty">برجاء عدم ترك الحقل فارغ</string>
    <string name="Login">جار تسجيل الدخول</string>
    <string name="InvaledData">عفوا البيانات غير صحيحه</string>
    <string name="logOut">تسجيل الخروج</string>
    <string name="areushor">\"هل انت متأكد \"</string>
    <string name="LogginfOut">جار تسجيل الخروج</string>
    <string name="ErrorHappend">\"عفوا يبدو ان هناك خطأ قد حصل \"</string>
    <string name="ShowIDNailty">عرض صورة الرقم القومي للزوج/الزوجة</string>
    <string name="ShowFileAttachemnt">تحميل ملفات إيصال المرافق</string>
    <string name="Donwlcomplet"> تم التحميل في هذا المسار</string>
    <string name="VaicleCondation">إمتلاك / حالة مركبة</string>
    <string name="attachmentLiens">أرفق رخصة القيادة</string>
    <string name="MarkapAttacjmen">ارفق رخصة المركبة</string>
    <string name="payattachment">أرفق صورة عقد الشراء</string>
    <string name="Cardshow">عرض صورة الرقم القومي</string>
    <string name="licnetshow">عرض رخصة القيادة</string>
    <string name="showViecl">عرض رخصة المركبة</string>
    <string name="PaymentShows">عرض صور عقد الشراء</string>
    <string name="Pathner">ارفاق صورة الرقم القومي للشركاء</string>
    <string name="uplaod">ارفاق رخصة النشاط</string>
    <string name="attachemdCardpay">ارفق البطاقة الضريبية</string>
    <string name="Layoutheroy">مستخرج سجل تجاري</string>
    <string name="dfd">ارفاق إيصال المرافق</string>
    <string name="Roylty">ارفق سند المليكة</string>
    <string name="Diaplwe">عرض صورة الرقم القومي للشركاء</string>
    <string name="showActvityShow">عرض رخصة النشاط</string>
    <string name="ShowTheDisplacard">عرض البطاقة ضريبية</string>
    <string name="dsdfds">عرض مستخرج سجل تجاري</string>
    <string name="showRoylty">عرض سند الملكية</string>
    <string name="showRwewe">عرض إيصال المرفق</string>
    <string name="getthedata">جاري ارسال البيانات</string>
    <string name="PaymentBay">ارفاق فواتير شراء الموردين </string>
    <string name="ppaymentHesoty">ارفاق كشوف المبيعات</string>
    <string name="DisplayPayment">عرض فواتير شراء الموردين</string>
    <string name="Display">عرض كشوف المبيعات</string>
    <string name="errorMeshae">عفوا يبدو ان هناك مشكلة في ملف الذي تم اختيار باسم</string>
    <string name="Gander">النوع :</string>
    <string name="male">ذكر</string>
    <string name="female">انثي</string>
    <string name="filesIsExstits">ان الملف بالفعل موجود في هذا المسار </string>
    <string name="jobinfo">بيانات جهة العمل</string>
    <string name="jobName">إسم جهة العمل</string>
    <string name="jobAdders">عنوان جهة العمل</string>
</resources>