<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screens.Fragment.DelegateCycle.NotesAddsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Parent">
        <LinearLayout
            android:id="@+id/CLientHadder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/Content"
            android:background="@color/nearGreen"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"

            app:layout_constraintEnd_toEndOf="@id/Parent"
            app:layout_constraintStart_toStartOf="@id/Parent"
            app:layout_constraintTop_toTopOf="@id/Parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="@string/StepsQusetion"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />



        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/CLientHadder"
            app:layout_constraintStart_toStartOf="@id/Parent"
            app:layout_constraintEnd_toEndOf="@id/Parent"
            app:layout_constraintBottom_toBottomOf="@id/Parent"
            android:id="@+id/Content"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ButtonCoremit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/StepsOperation"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:strokeColor="@color/nearGreen"
                    app:strokeWidth="@dimen/_1sdp"/>

                <Button
                    android:id="@+id/ButtonGotoForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/startOpraation"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:textColor="@color/nearGreen"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:strokeColor="@color/nearGreen"
                    app:strokeWidth="@dimen/_1sdp"/>
                <Button
                    android:id="@+id/ButtonDiel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeColor="@color/nearGreen"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"

                    android:textSize="@dimen/_10sdp"
                    android:text="@string/retrunOperan"

                    style="@style/Widget.MaterialComponents.Button.TextButton"

                    app:strokeWidth="@dimen/_1sdp"/>
                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/TextInputDenyResson"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:hint="@string/RejectReson"
android:visibility="gone"
                    android:textSize="@dimen/_12ssp"

                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"

                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:boxStrokeWidthFocused="@dimen/_2sdp"
                   >

                    <AutoCompleteTextView
                        android:id="@+id/autotext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textSize="@dimen/_10ssp"

                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/TextInputDenyResson1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:hint="@string/why"
                    android:visibility="gone"
                    android:textSize="@dimen/_12ssp"

                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"

                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:boxStrokeWidthFocused="@dimen/_2sdp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Noteanser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/_60sdp"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/ButtonCoremitDiel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/_15sdp"
                    android:visibility="gone"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/Conframtion"
                    android:textColor="@color/black"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/_1sdp"/>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>